refactor modules list finance and delete data
